--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,9 @@
 language: nix
 
 script:
- - nix-env -i -f default.nix -A latest
- - ./check.sh .
+  - nix-build --no-out-link scripts/check.nix
+  - nix-env -i -f default.nix -A latest
+  - ./scripts/check.sh .
 
 notifications:
   slack: fretlink:pTIylIN7zkwRFuL3aHERmsbB
